--- a/src/App.scss
+++ b/src/App.scss
@@ -67,7 +67,27 @@ ul {
 }
 
 li {
+  &:hover {
+    background-color: lightgray;
+  }
   color: $color-blue;
   font-weight: $font-thin;
   font-size: $font-small;
+  p {
+    color: black;
+    font-weight: $font-bold;
+  }
+  section {
+    color: blue;
+  }
+  article {
+    color: orange;
+
+    h3 {
+      color: green;
+    }
+  }
+  h2 {
+    color: pink;
+  }
 }
